@@ -35,6 +35,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-12208 (SimpleXML infinite loop when a cast is used inside a
     foreach). (nielsdos)
   . Fixed bug #55098 (SimpleXML iteration produces infinite loop). (nielsdos)
+  . Fixed bug GH-12167 (Unable to get processing instruction contents in
+    SimpleXML). (nielsdos)
+  . Fixed bug GH-12169 (Unable to get comment contents in SimpleXML).
+    (nielsdos)
 
 - Streams:
   . Fixed bug GH-12190 (binding ipv4 address with both address and port at 0).
